@@ -6,7 +6,7 @@ module ActiveScaffold::DataStructures::Association
       klass.reflect_on_all_associations
     end
 
-    delegate :collection?, :polymorphic?, :association_primary_key, :foreign_type, :table_name, :nested?, :scope, to: :@association
+    delegate :collection?, :polymorphic?, :association_primary_key, :foreign_type, :table_name, :nested?, :scope, :class_name, to: :@association
 
     def through?
       @association.options[:through].present?
@@ -17,11 +17,11 @@ module ActiveScaffold::DataStructures::Association
     end
 
     def through_reflection
-      @association.through_reflection if through?
+      @through_reflection ||= self.class.new(@association.through_reflection) if through?
     end
 
     def source_reflection
-      @association.source_reflection if through?
+      @source_reflection ||= self.class.new(@association.source_reflection) if through?
     end
 
     def inverse_klass
